# fastapi-tenancy

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: changelog.md  config.md  index.md  isolation.md  testing.md
docs/api/: config.md  context.md  exceptions.md  index.md  isolation.md  manager.md  middleware.md  resolution.md  storage.md  types.md
docs/examples/: advanced.md  basic.md  index.md  intermediate.md
docs/getting-started/: README.md  configuration.md  index.md  installation.md  quickstart.md
docs/guides/: dependencies.md  index.md  isolation.md  middleware.md  migrations.md  production.md  resolution.md  testing.md
examples/: README.md
examples/01-basic/: Dockerfile  docker-compose.yml  init.sql  requirements.txt
examples/01-basic/app/: main.py
examples/01-basic/tests/: test_notes.py
examples/02-intermediate/: Dockerfile  alembic.ini  docker-compose.yml  init.sql  requirements.txt
examples/02-intermediate/alembic/: env.py
examples/02-intermediate/app/: main.py
examples/02-intermediate/app/api/: __init__.py
examples/02-intermediate/app/models/: __init__.py
examples/02-intermediate/app/schemas/: __init__.py
examples/02-intermediate/tests/: test_invoicer.py
examples/03-advanced/: alembic.ini  docker-compose.yml  init.sql  pytest.ini  requirements.txt
examples/03-advanced/alembic/: env.py
examples/03-advanced/app/: main.py
examples/03-advanced/app/models/: __init__.py
examples/03-advanced/app/services/: __init__.py
examples/03-advanced/app/workers/: __init__.py
examples/03-advanced/tests/: conftest.py
examples/03-advanced/tests/e2e/: test_live.py
examples/03-advanced/tests/integration/: test_api.py
examples/03-advanced/tests/unit/: test_project_service.py
src/fastapi_tenancy/: __init__.py  dependencies.py  manager.py
src/fastapi_tenancy/cache/: __init__.py  tenant_cache.py
src/fastapi_tenancy/core/: __init__.py  config.py  context.py  exceptions.py  types.py
src/fastapi_tenancy/isolation/: __init__.py  base.py  database.py  factory.py  hybrid.py  rls.py  schema.py
src/fastapi_tenancy/middleware/: __init__.py  tenancy.py
src/fastapi_tenancy/migrations/: __init__.py  manager.py
src/fastapi_tenancy/resolution/: __init__.py  base.py  factory.py  header.py  jwt.py  path.py  subdomain.py
src/fastapi_tenancy/storage/: __init__.py  memory.py  postgres.py  redis.py  tenant_store.py
src/fastapi_tenancy/utils/: __init__.py  db_compat.py  security.py  validation.py
tests/: __init__.py  conftest.py  test_cache.py  test_concurrent_isolation.py  test_config.py  test_coverage_gaps.py  test_db_compat.py  test_dependencies.py  test_e2e_sqlite.py  test_exceptions.py  test_isolation_database.py  test_isolation_hybrid.py  test_isolation_providers.py  test_isolation_sqlite.py  test_manager.py  test_memory_store.py  test_middleware.py  test_migrations.py  test_postgres_store_sqlite.py  test_redis_store.py  test_resolution_factory.py  test_resolvers.py  test_resolvers_extended.py  test_security.py  test_sql_injection.py  test_storage_coverage.py  test_tenant_context.py  test_tenant_model.py  test_validation.py
tests/unit/: __init__.py  test_config.py  test_context.py
tests/unit/core/: __init__.py  test_config.py  test_context.py  test_exceptions.py  test_types.py
tests/unit/utils/: __init__.py  test_db_compat.py  test_security.py  test_validation.py
